# High-Performance-Computing

./: README.md
01_Getting_Used_to_GitHub/: .travis.yml  README.md  test.py
02_Directory_Manipulation/: .travis.yml  README.md  test.py
03_Finding_Files_(Shell)/: .travis.yml  README.md  find.out  myfind.sh  test.py
04_Regular_Expressions/: .travis.yml  README.md  grep1.out  parse1.sh  parse2.sh  sifs.txt  test.py
05_Merge_Requesting/: .travis.yml  README.md  test.py
06 - bash/: .travis.yml  README.md  bash_profile  bashrc  test.py
07_Stress_Strain/: .travis.yml  README.md  assignment7.py  test.py
08_Toughness/: .travis.yml  README.md  assignment8.ipynb  assignment8.py  test.py
09_Stress_Strain_Curve/: .travis.yml  README.md  assignment9.py  assignment9.tex  texify.py
10_2D_Laplace_Numba/: laplace.py
11_2D_Laplace_CFFI/: .travis.yml  README.md  iterate.c  iterate_build.py  laplace.py  test.py
12_2D_Laplace_SWIG/: .travis.yml  README.md  assignment12.ipynb  iterate.c  iterate.h  iterate.i  laplace.py  test.py
13_Cmake/: .travis.yml  CMakeLists.txt  README.md
13_Cmake/src/: CMakeLists.txt  iterate.c
14_Parallel_File_Reading_Stress_Strain/: .travis.yml  README.md  assignment14.py  assignment9.py  test.py
15_Parallel_Integration_Toughness/: .travis.yml  README.md  assignment15.py  test.py
16_Parallel_Gauss_Quadrature/: .travis.yml  README.md  assignment16.py  test.py
17_Parallel_MaxValue_Epetra/: .travis.yml  README.md  assignment17.py  test.py
18_Parallel_Toughness_Epetra/: .travis.yml  README.md  assignment18.py  assignment8.py  test.py
(+20 files in other folders)
